--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "api for manipulate customer data",
     "autoload": {
         "psr-4": {
-            "App": "src/"
+            "App\\": "src/"
         }
     },
     "authors": [
@@ -11,5 +11,10 @@
             "name": "guilherme olinto"
         }
     ],
-    "require": {}
+    "require": {
+        "slim/slim": "^4.14",
+        "slim/psr7": "^1.7",
+        "nyholm/psr7": "^1.8",
+        "nyholm/psr7-server": "^1.1"
+    }
 }
