--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,11 @@
         "slim/psr7": "^1.7",
         "nyholm/psr7": "^1.8",
         "nyholm/psr7-server": "^1.1"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^12.0"
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
     }
 }
